CHANGES.txt - 2011-08-02
------------------------

CHANGES IN CUPS V1.5.1

	- Jobs canceled at the printer were retried by the IPP backend.
	- "cupsfilter -u" deleted the input file instead of the PPD file.
	- The scheduler did not compute the cost of PPD filters defined using
	  the cupsFilter2 keyword properly.


CHANGES IN CUPS V1.5.0

	- Documentation updates.
	- Localization update (STR #3865)
	- Needed to limit TLS to v1.0 on some versions of Mac OS X.
	- The snmp backend did not work with some printers.


CHANGES IN CUPS V1.5rc1

	- Compile fixes (STR #3849, STR #3850)
	- The scheduler didn't check for empty values for several configuration
	  directives (STR #3861)
	- ipptool didn't generate valid XML when a test was skipped.
	- Added additional error checking to the 1284 device ID code (STR #3858)
	- Fixed some compatibility issues migrating from the old usblp backend
	  to the libusb backend (STR #3860)
	- Fixed the wake-from-sleep printing behavior on Mac OS X.
	- The scheduler incorrectly allowed jobs to be held from a terminating
	  state.
	- The cups-driverd program could crash when a PPD was renamed.
	- The dnssd backend took too long to discover printers on large or busy
	  networks with the new default timeout used by lpinfo and the web
	  interface. This resulted in "lost" printers.


CHANGES IN CUPS V1.5b2

	- Documentation updates.
	- Localization updates (STR #3845)
	- Compiler warning cleanup.
	- Fixed PIE support for Linux (STR #3846)
	- Made httpSetTimeout API public and use it in the IPP backend to avoid
	  timeout errors.
	- The scheduler incorrectly set the "authenticated" printer-type bit for
	  remote queues using authentication.


CHANGES IN CUPS V1.5b1

	- The CUPS library now supports per-connection HTTP timeouts and
	  callbacks.
	- The CUPS library now supports (limited) SSL/TLS X.509 certificate
	  validation and revocation (STR #1616)
	- Updated the PostScript filter to support IncludeFeature in more
	  circumstances (STR #3417)