@@ -6,6 +6,7 @@ _mimeDeleteFilter
 _mimeDeleteType
 _mimeFileType
 _mimeFilter
+_mimeFilter2
 _mimeFilterLookup
 _mimeFirstFilter
 _mimeFirstType
